# mpdinfo

./: mpdinfo.cabal
src/: Main.hs  PlaybackState.hs
